--- a/lifeManager/app/src/main/res/values/strings.xml
+++ b/lifeManager/app/src/main/res/values/strings.xml
@@ -1,43 +1,13 @@
 <resources>
     <string name="app_name">lifeManager</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-    <string name="intro_text">Welcome to LifeManager! \nSelect an activity to start</string>
-    <string name="button_schedule">Schedule</string>
-    <string name="button_analytics">Analytics</string>
-    <string name="title_activity_analytics">Analytics</string>
-    <string name="spinner_text">How much time have you spent in the past:</string>
-    <string name="calculate">Calculate</string>
-    <string name="analyticsTotalTimes">This will hold total times spent \n Gaming - 100 \n Sleeping - 0 \n Homework - 5 \n CS262 - over 9000</string>
-    <string-array name="binArray">
-        <item>Day</item>
-        <item>Week</item>
-        <item>Month</item>
-        <item>Year</item>
-    </string-array>
-    <string-array name="listOfActivities">
-        <item>Eating</item>
-        <item>Sleeping</item>
-        <item>Going to the Bathroom</item>
-        <item>Shopping</item>
-    </string-array>
-    <string name="title_activity_schedule">Schedule</string>
-    <string name="buttonStart">Start</string>
-    <string name="buttonStop">Stop</string>
-    <string name="setTime">Manually Enter Time</string>
-    <string name="startTime">Start Time</string>
-    <string name="endTime">End Time</string>
-    <string name="enterStart">Enter Start Time</string>
-    <string name="enterStartDate">Enter Start Date</string>
-    <string name="enterEnd">Enter End Time</string>
-    <string name="enterEndDate">Enter End Date</string>
-    <string name="action_settings">Settings</string>
-    <string name="iceCreamSandwich">Ice Cream Sandwiches</string>
-    <string name="testString">There would likely not be a picture here, just text and maybe a description   Just trying to demonstrate the cardView</string>
-    <string name="categoryText">Exercise</string>
-    <string name="descriptionText">Self-development</string>
-    <string name="timeText">7:30 AM 8:30 AM</string>
+    <string name="title_schedule">Schedule</string>
+    <string name="title_new_event">New Event</string>
+    <string name="title_analytics">Analytics</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="analyticst">Analyticst</string>
+    <string name="newevent">newEvent</string>
     <string name="titleHint">Title</string>
     <string name="choose_an_area">Choose an area</string>
     <string name="direct">Direct</string>
@@ -54,7 +24,4 @@
     <string name="defaultEnd">8:30 AM</string>
     <string name="noteHint">Note</string>
     <string name="lableHint">Label</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
